--- a/resplus.html
+++ b/resplus.html
@@ -38,6 +38,10 @@
        padding:10px;
         padding-left:30px;
       }
+      .answer{
+       padding:10px;
+        background:#eee;
+      }
       /* Set the style for the main page content */
       .content {
         margin-left: 250px;
@@ -89,7 +93,7 @@
     </div>
     <div class="content">
       <div id='metaData'>
-      <h1>Job Description - deep dive</h1>
+      <h1>Job Description - deep dive 1.1</h1>
       <p> Paste a job description below. And get AI enhanced Job details with questions.</p>
       <label id='jdskills'></label>
  
