--- a/resplus.html
+++ b/resplus.html
@@ -123,7 +123,7 @@
       prompt = "Give short summary with list of key skills from this" + $("#description").val();
       askai_generic(prompt, $(this).next());
      $("#description").slideUp();
-     $("#submit").hide());
+     $("#submit").hide();
       $("#extras").slideDown();
     });
   function addQuestions(){
