--- a/resplus.html
+++ b/resplus.html
@@ -105,16 +105,9 @@
       
       </div>
     </div>
+    <script src='resplus.js'></script>    
 <script>
-  var questions = ["List all the linkedin skills based on this ","List suitable job titles for this resume"];
-  var jd_questions = ["List 10 interview questions based on this job ","List key skills and requirements for this job","What are key activities and responsibilities for this job",
-"How much salary can I expect for this job",
-"Give me best candidate’s resume for inspiration based on this job",
-"What is not in my resume / experience based on this job",
-"Give mock interview questions for this job",
-"What would be career path for this job", 
-"Which training and Certifications would help for this job"
-]; 
+
   var scriptkey = "AKfycbwPfgbUDEaZF_aGu6QNT3Nmzvx9SK290QUWRGC66PLSM3xVCOKsRqEjldWPvvGwiF2aIA";
 
   
