--- a/resplus.html
+++ b/resplus.html
@@ -96,7 +96,7 @@
       <h1>Job Description - deep dive 1.4</h1>
       <p> Paste a job description below. And get AI enhanced Job details with questions.</p>
       <label id='jdskills'></label>
- 
+        <button onclick='$("#jd_section").toggle()'> Job Description </button>
       <textarea  id="description" placeholder="Enter a job description..."></textarea>
         <button id='submit'>Process this</button><div id='summary'></div><br>
       <ul id="extras" style="display:none">
