--- a/resplus.html
+++ b/resplus.html
@@ -97,7 +97,7 @@
       <p> Paste a job description below. And get AI enhanced Job details with questions.</p>
       <label id='jdskills'></label>
         <button onclick='$("#jd_section").toggle()'> Job Description </button>
-        <scetion id="jd_section">
+        <section id="jd_section">
       <textarea  id="description" placeholder="Enter a job description..."></textarea>
         <button id='submit'>Process this</button><div id='summary'></div><br>
           </section>
