--- a/resplus.html
+++ b/resplus.html
@@ -99,8 +99,10 @@
         <button onclick='$("#jd_section").toggle()'> Job Description </button>
         <section id="jd_section">
       <textarea  id="description" placeholder="Enter a job description..."></textarea>
-        <button id='submit'>Process this</button><div id='summary'></div><br>
-          </section>
+        <button id='submit'>Process this</button>
+        </section>
+          <div id='summary'></div><br>
+          
       <ul id="extras" style="display:none">
         
         </ul>
