--- a/resplus.html
+++ b/resplus.html
@@ -120,8 +120,8 @@
       $("#summary").html("AI is working <img height='50px' src='https://hackernoon.com/images/0*4Gzjgh9Y7Gu8KEtZ.gif' />");
       prompt = "Give short summary with list of key skills from this" + $("#description").val();
       askai_generic(prompt, $("#summary"));
-     $("#description").slideUp();
-     $("#submit").hide();
+     $("#jd_section").slideUp();
+     
       $("#extras").slideDown();
     });
    var loc = location.href;
