--- a/resplus.html
+++ b/resplus.html
@@ -140,7 +140,7 @@
     $(".question").click(function(){
       
       $(this).next().html("<img height='50px' src='https://hackernoon.com/images/0*4Gzjgh9Y7Gu8KEtZ.gif' />");
-      prompt = $(this).text() + $("#description").val();
+      prompt = $(this).text() + $("#summary").val();
       askai_generic(prompt, $(this).next());
       
     });
