--- a/resplus.html
+++ b/resplus.html
@@ -221,8 +221,8 @@
 
      
   }
-
-  var jd= decodeURIComponent("<?= parameterValue ?>");
+ var loc = location.href;
+  var jd= decodeURIComponent(loc.substring(loc.indexOf("jd=") +3);
   
   if(jd.indexOf("?=") !== 1){
       
