--- a/resplus.html
+++ b/resplus.html
@@ -222,7 +222,7 @@
      
   }
  var loc = location.href;
-  var jd= decodeURIComponent(loc.substring(loc.indexOf("jd=") +3);
+  var jd= decodeURIComponent(loc.substring(loc.indexOf("jd=") +3));
   
   if(jd.indexOf("?=") !== 1){
       
