--- a/resplus.html
+++ b/resplus.html
@@ -132,6 +132,9 @@
 	    </div>
     <script src="resplus.js"></script>
     <div style="display: none;" id="hiddendiv"></div>
-
+    <form id="postform" style="display: none;">
+	    <input id="q" name="q" />
+	    <button type="submit">submit</button>
+	    </form>
 </body>
 </html>
