--- a/resplus.html
+++ b/resplus.html
@@ -54,6 +54,8 @@
       .leftpanel,.rightpanel{
 	      width:45%;
 	      float:left;
+	      height:calc(100%-50px);
+	      overflow:auto;
 	    }
       /* Set the style for the textarea and button */
       #resume,#description {
