--- a/resplus.html
+++ b/resplus.html
@@ -48,6 +48,7 @@
         margin: 30px;
         padding: 30px;
 	position:relative;
+	display:none;
       }
       .leftpanel,.rightpanel{
 	      width:45%;
