--- a/resplus.html
+++ b/resplus.html
@@ -104,6 +104,7 @@
 	      	background:#333;
 	      	color:white;
 	       top:0px;
+	      	left:0px;
 	      margin:0px;
 	      padding:10px;
 		
@@ -115,6 +116,12 @@
 	    }
 	 .nav_btn{
 		float:right; 
+		 margin: 10px;
+		 cursor:pointer;
+		 font-size:16px;
+	    }
+	.nav_btn:hover{
+	       background:#555;
 	    }
     </style>
      <script src="jquery.js"></script>
