--- a/resplus.html
+++ b/resplus.html
@@ -15,12 +15,9 @@
       
       /* Set the style for the left sidebar */
       .rescontent {
-        background-color: white;
-        color: #222;
-        width: 100%;
-        
-        top: 0;
-        padding: 20px;
+        margin: 30px;
+        padding: 30px;
+	position:relative;
       }
       .left{
         left: 0;
@@ -111,7 +108,7 @@
 	    }
 	#nav_title{
 		font-size:20px;
-		
+		float:left;
 	    }
 	 .nav_btn{
 		 margin-top: -1px;
