--- a/resplus.html
+++ b/resplus.html
@@ -6,7 +6,7 @@
     <style>
       /* Set the overall style for the page */
       body {
-        font-family: Helvetica, Arial, sans-serif;
+        font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
         margin: 0px;
         padding: 20px;
         
@@ -108,10 +108,12 @@
 	    }
 	#nav_title{
 		font-size:20px;
+		margin-left:100px;
+		margin-right:200px;
 		float:left;
 	    }
 	 .nav_btn{
-		 margin-top: -1px;
+		 margin-top: 1px;
     		 width: 100px;
 		float:left; 
 		 margin: 10px;
