--- a/resplus.html
+++ b/resplus.html
@@ -140,8 +140,9 @@
 	 	 <button id="savebtn">Save</button>
     	</div>
     	<div class="rightpanel">
-     		 <button onclick="askai_generic('resume','resskills',0)">Skills List</button>    <button onclick="askai_generic('resume','resskills',1)">Job title</button>
-      		<div id='resskills' style='height:200px;overflow:auto'></div>
+		<h2> Resume 360 - AI enhanced </h2>
+		<ul id="resextras" ></ul>
+     		 
     	</div>
 </div>	  
     <div class="jdcontent">
@@ -160,7 +161,7 @@
 		<h2> Job 360 - AI enhanced </h2>	
           <div id='summary'></div><br>
           
-      <ul id="extras" ></ul>
+      <ul id="jdextras" ></ul>
       </div>
 	    </div>
     <script src="resplus.js"></script>
