--- a/resplus.html
+++ b/resplus.html
@@ -9,7 +9,6 @@
         font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
         margin: 0px;
         padding: 20px;
-        
         font-size: 16px;
       }
       
@@ -42,8 +41,8 @@
       }
       /* Set the style for the main page content */
       .jdcontent {
-        margin: 30px;
-        padding: 30px;
+        margin: 10px;
+        padding: 10px;
 	position:relative;
 	display:none;
       }
@@ -52,6 +51,9 @@
 	      float:left;
 	      height:calc(100%-50px);
 	      overflow:auto;
+	    }
+	.leftpanel{
+	     background:#eee;
 	    }
       /* Set the style for the textarea and button */
       #resume,#description {
