--- a/resplus.html
+++ b/resplus.html
@@ -15,8 +15,11 @@
       /* Set the style for the left sidebar */
       .rescontent {
         margin: 30px;
-        padding: 30px;
+	      margin-left:1px;
+	margin-top:20px;
+        padding: 5px;
 	position:relative;
+	      width:45%;
       }
       .left{
         left: 0;
@@ -42,6 +45,8 @@
       /* Set the style for the main page content */
       .jdcontent {
         margin: 10px;
+	width:45%;      
+	margin-top:20px;
         padding: 10px;
 	position:relative;
 	display:none;
@@ -91,12 +96,12 @@
       button:hover {
         background-color: #3e8e41;
       }
-  .kws{
-	  background:#efe;
-	  padding:10px;
-	  line-height: 35px;
-	  border-radius: 10px;
-  }
+	  .kws{
+		  background:#efe;
+		  padding:10px;
+		  line-height: 35px;
+		  border-radius: 10px;
+	  }
       #nav_bar{
 		    position: fixed;
 		    width: 100%;
