--- a/resplus.html
+++ b/resplus.html
@@ -22,7 +22,9 @@
 	position:relative;
 	display:none;
       }
-      
+      .rescontent{
+	      display:block;
+	    }
       #metaData{
           background:white;
           color: black;
@@ -42,7 +44,7 @@
       .leftpanel,.rightpanel{
 	      width:45%;
 	      float:left;
-	      height:calc(100%-50px);
+	      height:100%;
 	      overflow:auto;
 	    }
 	.leftpanel{
