--- a/resplus.html
+++ b/resplus.html
@@ -44,7 +44,7 @@
       .leftpanel,.rightpanel{
 	      width:45%;
 	      float:left;
-	      height:100%;
+	      height:calc(100vh - 40px);
 	      overflow:auto;
 	    }
 	.leftpanel{
