--- a/resplus.html
+++ b/resplus.html
@@ -46,6 +46,7 @@
 	      float:left;
 	      height:calc(100vh - 40px);
 	      overflow:auto;
+	      padding:10px;
 	    }
 	.leftpanel{
 	     background:#eee;
