--- a/resplus.html
+++ b/resplus.html
@@ -16,8 +16,9 @@
      
       .rescontent,.jdcontent {
         margin: 10px;
+	margin-left:1px;
 	width:100%;      
-	margin-top:40px;
+	margin-top:45px;
         padding: 10px;
 	position:relative;
 	display:none;
