--- a/resplus.html
+++ b/resplus.html
@@ -151,7 +151,7 @@
       <h1>Job Description </h1>
       <p> Paste a job description below. And get AI enhanced Job details with questions.</p>
       <label id='jdskills'></label>
-        <button onclick='$("#description").html(jd)'> Load a sample job description </button>
+        <button onclick='$("#description").html(job1)'> Load a sample job description </button>
         <section id="jd_section">
 		
 			<div contenteditable="true"   id="description" placeholder=" or enter a job description "></div>
