--- a/resplus.html
+++ b/resplus.html
@@ -151,7 +151,7 @@
       <h1>Job Description </h1>
       <p> Paste a job description below. And get AI enhanced Job details with questions.</p>
       <label id='jdskills'></label>
-        <button onclick='$("#description").html(job1)'> Load a sample job description </button>
+        <button onclick='$("#description").html($("#samplejob").html())'> Load a sample job description </button>
         <section id="jd_section">
 		
 			<div contenteditable="true"   id="description" placeholder=" or enter a job description "></div>
@@ -168,7 +168,34 @@
 	    </div>
     <script src="resplus.js"></script>
     <div style="display: none;" id="hiddendiv"></div>
-    <form id="postform" style="display: none;">
+<div style="display: none;" id="samplejob">  Location: San Francisco, CA
+
+Company: Acme Corporation
+
+We are seeking a skilled and experienced data engineer to join our team. As a data engineer, you will be responsible for designing, building, and maintaining the data architecture that supports our organization's data analytics and reporting needs. This is a critical role that requires a strong technical background, excellent problem-solving skills, and the ability to work collaboratively with a team of data scientists, analysts, and other stakeholders.
+
+Responsibilities:
+
+Design and build the data architecture to support the organization's data needs
+Develop and maintain data pipelines to move data from source systems to the data architecture
+Optimize data pipelines for reliability, scalability, and efficiency
+Work with data analysts and data scientists to ensure data accuracy and completeness
+Monitor and troubleshoot data pipeline issues
+Develop and maintain data quality controls and data governance processes
+Stay up to date with the latest data engineering tools and technologies
+Requirements:
+
+Bachelor's or Master's degree in Computer Science, Engineering, or a related field
+3+ years of experience as a data engineer or related role
+Strong experience with SQL and database technologies (e.g., MySQL, PostgreSQL, Oracle)
+Experience with big data technologies such as Hadoop, Spark, or Hive
+Experience with data pipeline tools such as Apache Airflow, Apache NiFi, or AWS Glue
+Experience with cloud-based data storage solutions such as AWS S3 or Azure Data Lake
+Excellent problem-solving skills and attention to detail
+Strong communication and collaboration skills
+If you are passionate about data engineering and have a track record of designing and building robust data architectures, we would love to hear from you. Please submit your resume and cover letter for consideration.
+	  </div>
+	<form id="postform" style="display: none;">
 	    <input id="q" name="q" />
 	    <button type="submit">submit</button>
 	    </form>
