--- a/resplus.html
+++ b/resplus.html
@@ -136,7 +136,7 @@
 	  <div id="nav_bar"><label id="nav_title">AI Guru </label><label class="nav_btn" onclick="$('.rescontent').show();$('.jdcontent').hide();"> Profile</label><label class="nav_btn" onclick="$('.jdcontent').show();$('.rescontent').hide();"> Job </label><label class="nav_btn login" onclick=""> login </label>	</div>		
     <div class="left rescontent">
 	<div class='leftpanel'>	
-      		<h2>Your profile</h2>
+      		<h2>Your Resume</h2>
 	 	 <div contenteditable="true"  id="resume" placeholder="Enter some text here..."></div>
 	 	 <button id="savebtn">Save</button>
     	</div>
@@ -161,7 +161,8 @@
 	</div>
 	<div class="rightpanel">
 		<h2> Job 360 - AI enhanced </h2>	
-          <div id='summary'></div><br>
+		<h5> Summary</h5>
+		<div id='summary'>AI will scan and create a summary of the job</div>
           
       <ul id="jdextras" ></ul>
       </div>
