--- a/resplus.html
+++ b/resplus.html
@@ -161,8 +161,8 @@
 	</div>
 	<div class="rightpanel">
 		<h2> Job 360 - AI enhanced </h2>	
-		<h5> Summary</h5>
-		<div id='summary'>AI will scan and create a summary of the job</div>
+		<h3> Summary : </h3>
+		<div id='summary'>AI will scan and create a matching summary of the job</div>
           
       <ul id="jdextras" ></ul>
       </div>
