--- a/resplus.html
+++ b/resplus.html
@@ -86,6 +86,10 @@
         cursor: pointer;
         
       }
+	.question:hover{
+		color:#0969da;
+		text-decoration:underline;
+	    }
       button:hover {
         background-color: #3e8e41;
       }
