--- a/resplus.html
+++ b/resplus.html
@@ -141,7 +141,7 @@
    
 	<script>
 		// Create a new EventSource to receive streaming data
-		var source = new EventSource("https://artatfalls.pythonanywhere.com/stream?q=explain chatgpt");
+		var source = new EventSource("https://artatfalls.pythonanywhere.com/stream?q=calculate x in x^2+4x+3=0 .");
 
 		// When a new message is received, add it to the chat box
 		source.onmessage = function(event) {
