--- a/stream.html
+++ b/stream.html
@@ -9,12 +9,12 @@
 	<div id="chat-box"></div>
 	<script>
 		// Create a new EventSource to receive streaming data
-		var source = new EventSource("https://artatfalls.pythonanywhere.com/stream?q=explain chatgpt");
+		var source = new EventSource("https://artatfalls.pythonanywhere.com/stream?q=solve x^2+4x+5=0 .");
 
 		// When a new message is received, add it to the chat box
 		source.onmessage = function(event) {
 			var chatBox = document.getElementById("chat-box");
-			chatBox.innerHTML += " " + event.data + "";
+			chatBox.innerHTML +=  event.data ;
 			chatBox.scrollTop = chatBox.scrollHeight;
 		};
 	</script>
