--- a/resplus.html
+++ b/resplus.html
@@ -43,14 +43,16 @@
       /* Set the style for the main page content */
       
       .leftpanel,.rightpanel{
-	      width:48%;
+	      width:55%;
 	      float:left;
 	      height:calc(100vh - 40px);
 	      overflow:auto;
 	      padding:10px;
+	      padding-right:20px;
 	    }
 	.leftpanel{
 	     background:#eee;
+	     width:45%;
 	    }
       /* Set the style for the textarea and button */
       #resume,#description {
