--- a/summarize.html
+++ b/summarize.html
@@ -1,5 +1,6 @@
 
 <html>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>>
 <style>
 *{
     font-family: helvetica neue;
