--- a/summarize.html
+++ b/summarize.html
@@ -66,7 +66,7 @@ function summarize(){
     formdata.append("key", "b9812cebd408fb73a7f180f08ef604d9");
     formdata.append("txt", text);
     formdata.append("sentences", 10);
-
+    console.log(formdata);
     const requestOptions = {
     method: 'POST',
     body: formdata,
