--- a/resplus.html
+++ b/resplus.html
@@ -65,10 +65,12 @@
         resize: none;
 	background:white;
 	color:#888;
-	overflow: auto;
+	overflow: hidden;
 	      
       }
-      
+	  #resume:hover,#description:hover {
+		overflow: auto;
+	  }
       button {
         background-color: #4CAF50;
         color: #fff;
