--- a/resplus.html
+++ b/resplus.html
@@ -174,7 +174,7 @@
 	<div class="rightpanel">
 		<h2> Job 360 - AI enhanced </h2>	
 		<h3> Summary : </h3>
-		<div id='summary'>AI will scan and create a matching summary of the job</div>
+		<div id='summary' class="answer">AI will scan and create a matching summary of the job</div>
           
       <ul id="jdextras" ></ul>
       </div>
