--- a/resplus.html
+++ b/resplus.html
@@ -39,7 +39,12 @@
        padding:10px;
         background:#eee;
 		border-radius: 10px;
+		max-height:200px;
+		overflow:hidden;
       }
+	  .answer:hover{
+		overflow:auto;
+	  }
       /* Set the style for the main page content */
       
       .leftpanel,.rightpanel{
