--- a/resplus.html
+++ b/resplus.html
@@ -37,7 +37,7 @@
       }
       .answer{
        padding:10px;
-        background:#eee;
+        background:#e4efe5;
 		border-radius: 10px;
 		max-height:200px;
 		overflow:hidden;
