--- a/resplus.html
+++ b/resplus.html
@@ -68,9 +68,9 @@
         border: 2px solid #ccc;
         border-radius: 5px;
         resize: none;
-	background:white;
-	color:#888;
-	overflow: hidden;
+		background:#eee;
+		color:#888;
+		overflow: hidden;
 	      
       }
 	  #resume:hover,#description:hover {
