--- a/resplus.html
+++ b/resplus.html
@@ -74,7 +74,7 @@
         border: 2px solid #ccc;
         border-radius: 5px;
         resize: none;
-		background:#fff;
+		background:#eee;
 		color:#888;
 		overflow: hidden;
 	      
@@ -174,7 +174,7 @@
       <h1>Job Description </h1>
       <p> Paste a job description below. And get AI enhanced Job details with questions.</p>
       <label id='jdskills'></label>
-        <button onclick='$("#description").html($("#samplejob").html());$("#submit").click()'> Load a sample job description </button><button id='submit'>Process this</button>
+        <button onclick='$("#description").html($("#samplejob").html());$("#submit").click()'> Load a sample job description </button><button style='float:right' id='submit'>Process this</button>
         <section id="jd_section">
 		
 			<div contenteditable="true"   id="description" placeholder=" or enter a job description "></div>
